base/wordpress-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress
  namespace: app
  labels:
    app: wordpress
spec:
  type: LoadBalancer
  selector:
    app: wordpress
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
