base/wordpress-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: wordpress-route
  namespace: app
spec:
  parentRefs:
    - name: wordpress-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: wordpress-service
          port: 80
          filters:
            - type: ExtensionRef
              extensionRef:
                group: networking.gke.io
                kind: HealthPolicy
                name: wordpress-health-policy
